# Kafka-Tutorial

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/tmx_training/: consumer_json.py  consumer_schema.py  consumers.py  main.py  producer_json.py  producer_schema.py  producers.py
src/tmx_training/consumers.py/: consumer_embedded.py  consumer_json.py  consumer_schema.py
src/tmx_training/producers/: producer_embedded.py  producer_json.py  producer_schema.py
