[project]
name = "training"
version = "0.1.0"
description = ""
authors = [
    {name = "iheb"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "confluent-kafka (>=2.11.0,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "fastavro (>=1.11.1,<2.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cachetools (>=6.1.0,<7.0.0)",
    "authlib (>=1.6.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.2"

[tool.ruff]
line-length = 79
target-version = "py313"
select = ["E", "F"]  # E = pycodestyle, F = pyflakes

[tool.taskipy.tasks]
test = "pytest"
lint = "black . --check --line-length 79"
format = "black . --line-length 79"
ruff = "ruff check ."
